--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   },
   "dependencies": {
     "babel-runtime": "^6.23.0",
-    "bcrypt": "^1.0.2",
+    "bcrypt": "0.8.7",
     "classnames": "^2.2.5",
     "dateformat": "^2.0.0",
     "html5-sortable": "^1.0.2",
