--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "meteor-node-stubs": "~0.2.0",
     "react": "^15.4.2",
     "react-addons-pure-render-mixin": "^15.3.2",
+    "react-boostrap-carousel": "^2.0.4",
     "react-dom": "^15.4.2",
     "react-mounter": "^1.2.0"
   }
